tests/cmd_sd_bad.out
./cmd_sd_bad.svx:4:10: error: Expecting numeric field, found "metres"
 *sd tape metres
          ^~~~~~
./cmd_sd_bad.svx:5:15: error: Unknown units "furlongs"
 *sd tape 0.05 furlongs
               ^~~~~~~~
./cmd_sd_bad.svx:6:15: error: Unknown units "furlongs"
 *sd tape 0.05 furlongs per fortnight
               ^~~~~~~~
./cmd_sd_bad.svx:7:5: error: Unknown quantity "tripe"
 *sd tripe 0.9 feet
     ^~~~~
./cmd_sd_bad.svx:8:10: error: Expecting numeric field, found "tripe"
 *sd tape tripe 0.9 feet
          ^~~~~
./cmd_sd_bad.svx:9:22: error: Invalid units "meters" for quantity
 *sd tape compass 0.4 meters
                      ^~~~~~
./cmd_sd_bad.svx:10:5: error: Unknown quantity ""
 *sd 0.9 feet
     ^

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
   1 0-node.
There were 0 warning(s) and 7 error(s) - no output files produced.
